--- a/chucknorrisjokes/index.html
+++ b/chucknorrisjokes/index.html
@@ -14,9 +14,10 @@
       background: url(https://www.webpt.com/sites/default/files/images/resources/201602_blog_whichreportshouldiuseandwhen_2.png) no-repeat fixed center;
       background-size: cover;
     }
-    button.get-jokes.button.button-primary {
+    button.get-jokes {
       background-color: #914233;
       border-color: rgb(0, 0, 0);
+      color: white;
     }
     input#number {
       border-color: rgb(0, 0, 0);
@@ -32,7 +33,7 @@
         <input type="number" id="number">
       </div>
       <div>
-        <button class="get-jokes button button-primary">Get Jokes!!...</button>
+        <button class="get-jokes">Get Jokes!!...</button>
       </div>
     </form>
     <ul class="jokes"></ul>
