--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     input#number {
       border-color: rgb(0, 0, 0);
     }
+    ul.jokes {
+      font-style: normal;
+      font-weight: bolder;
+      font-size: 2rem
+    }
   </style>
 </head>
 <body>
