added background color

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,400i" rel="stylesheet">
   <title>Chuck Norris Joke Generator</title>
   <style>
+    html {
+      background-color: #FCDAB7;
+    }
     body {
       font-family: 'IBM Plex Mono', monospace;
       font-style: italic;
