--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,400i" rel="stylesheet">
   <title>Chuck Norris Joke Generator</title>
   <style>
-    body {
-      font-family: 'IBM Plex Mono', monospace;
-      font-style: italic;
+    html {
       background: url(https://www.webpt.com/sites/default/files/images/resources/201602_blog_whichreportshouldiuseandwhen_2.png) no-repeat fixed center;
       background-size: cover;
       background-color: #FCDAB7;
+    }
+    body {
+      font-family: 'IBM Plex Mono', monospace;
+      font-style: italic;
     }
     button.get-jokes {
       background-color: #914233;
