edited bg image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Chuck Norris Joke Generator</title>
   <style>
     html {
-      background: url(https://www.webpt.com/sites/default/files/images/resources/201602_blog_whichreportshouldiuseandwhen_2.png) no-repeat fixed center;
+      background: url(https://www.webpt.com/sites/default/files/images/resources/201602_blog_whichreportshouldiuseandwhen_2.png) fixed center;
       background-size: cover;
       background-color: #FCDAB7;
     }
