--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     body {
       font-family: 'IBM Plex Mono', monospace;
       font-style: italic;
+      height: 100vh;
     }
     button.get-jokes {
       background-color: #914233;
